# Workflow_Approval_System

./: .gitignore  00_Project_Blueprint.md  01_PRD.md  02_Database_Design.md  03_API_Design.md  05_Development_Plan.md  06_Project_Status.md  07_Development_Log.md  AI_Project_Rules.md  CHANGELOG.md  CLAUDE.md  Developer_Documentation.md  Learning_Journal.md  步骤.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 18f54d3e1cb6_add_template_type_to_flow_instances.py  3c01f8e662d2_add_contract_product_sales_to_instance.py  6247827b186e_add_doc_template_ids_to_flow_instances.py  7413b2c017db_add_difficulty_and_endorsement.py  7a1b2c3d4e5f_add_file_folders.py  9a3b2c1d4e5f_simplify_templates_remove_versions.py  a1b2c3d4e5f6_remove_instance_fk_add_template_name.py  a6b7c8d9e0f1_remove_archive_status.py  b4c5d6e7f8a9_remove_skip_optional.py  baf8caa5c762_add_node_presets.py  cdc82f5bf321_initial_schema.py  d5e6f7a8b9c0_add_points_to_template_edges.py  e7f8a9b0c1d2_add_round_to_checks_approvals.py  f1a2b3c4d5e6_add_template_type_and_proposal_id.py  g1h2i3j4k5l6_add_require_signature.py  h3i4j5k6l7m8_multirole_signature.py  m8n9o0p1q2r3_signature_size.py  n1o2p3q4r5s6_document_template.py  o1p2q3r4s5t6_refactor_document_template.py  p2q3r4s5t6u7_add_notifications.py
backend/app/: main.py
backend/app/api/: approvals.py  auth.py  checks.py  configs.py  dashboard.py  deps.py  designer.py  endorsements.py  instances.py  roles.py  (+9 more)
backend/logs/: app.log.2026-07-13
backend/tests/: conftest.py  factories.py
(+224 files in other folders)
