[project]
name = "workflow-approval-system"
version = "1.0.0"
description = "企业流程审批系统后端"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
